# ane-python

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
examples/: basic_ane.py  checkpoint_io.py  inspect_kernels.py  train_steps.py
src/ane/: __init__.py  _bridge.pxd  _bridge.pyi  _bridge.pyx  kernel.py
src/ane/bridge/: LICENSE  README.md  ane_bridge.h  ane_bridge.m
tests/: conftest.py  test_bridge.py  test_integration.py  test_kernel.py
