[build-system]
requires = ["setuptools>=75", "cython>=3.2", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "ane"
version = "0.1.0"
description = "Python bindings for Apple Neural Engine (ANE) using Cython"
requires-python = ">=3.11"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.4.2",
]

[project.urls]
repository = "https://github.com/zchee/ane-python"

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pytest>=9.0.2",
    "ruff",
    "mypy",
    "ty",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that compile MIL and run on ANE hardware (require bridge + Apple Silicon)",
]

[tool.ruff]
preview = true
target-version = "py311"
line-length = 119
unsafe-fixes = true
src = ["src", "tests"]
extend-exclude = [
    "examples",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"src/ane/__init__.py" = ["RUF067"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
